se agrega la carpeta css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Energías Limpias - Mi primera página web</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -11,24 +12,28 @@
     </header>
     <main>
         <section>
-            <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet aliquid itaque corporis aperiam, suscipit optio reiciendis, molestiae necessitatibus ea ipsa modi atque? Cumque officia repellat beatae veniam ad harum nostrum!</h2>
+            <h2>¿Qué son las energías limpias?</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, itaque doloremque fugit impedit voluptatum rem delectus facilis fugiat? Quis labore nisi ipsa dolorum, porro illum consequatur odio numquam libero assumenda!</p>
             <img src="img/Parque Eólico.jpg" alt="Parque eólico con autogeneradores">
         </section>
 
         <section>
             <h2>Beneficios de las energías limpias</h2>
-            <ul>
+            <ol>
                 <li>Reducciones de emisiones de CO2.</li>
                 <li>Disminución de la contaminación atmosferica.</li>
                 <li>Disponibilidad inagotable de recursos naturales.</li>
                 <li>Impulso de desarrollo de comunidades energéticas.</li>
-
-            </ul>
+                <li>Aplicación de última generación.</li>
+            </ol>
         </section>
     </main>
 
     <footer>
-        <p>Elaborador por: <a href="bibliografia.html">Juan C. Builes</a></p>
+        <p>Elaborado por Camilo Builes
+            <a href="mailto:jumes99@gmail.com" target="_blank" class="correo">jumes99@gmail.com</a> 
+            <br>Bootcamp Programación Talento Tech - 2025
+        </p>
     </footer>
 </body>
 </html>
