modificaciones en css

--- a/index.html
+++ b/index.html
@@ -3,37 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Energías Limpias - Mi primera página web</title>
+    <title>Comunidades Energéticas - Uso de Flex</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Energías Limpias: Construyendo un futuro sostenible</h1>
+        <h1>Comunidades Energéticas</h1>
     </header>
-    <main>
-        <section>
-            <h2>¿Qué son las energías limpias?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, itaque doloremque fugit impedit voluptatum rem delectus facilis fugiat? Quis labore nisi ipsa dolorum, porro illum consequatur odio numquam libero assumenda!</p>
-            <img src="img/Parque Eólico.jpg" alt="Parque eólico con autogeneradores">
-        </section>
 
-        <section>
-            <h2>Beneficios de las energías limpias</h2>
-            <ol>
-                <li>Reducciones de emisiones de CO2.</li>
-                <li>Disminución de la contaminación atmosferica.</li>
-                <li>Disponibilidad inagotable de recursos naturales.</li>
-                <li>Impulso de desarrollo de comunidades energéticas.</li>
-                <li>Aplicación de última generación.</li>
-            </ol>
+    <main>
+        <section class="flex-container">
+            <div class="flex-item">
+                <h2>Información General</h2>
+                <p>Las comunidades  energéticas son iniciativas en las que los ciudadanos participan activamente en la producción, consumo y gestión de la energía principalmente en fuentes renovables</p>
+            </div>
+            <div class="flex-item">
+                <h2>Beneficios</h2>
+                <p>Permite que todos los ciudadanos tengan acceso a estos recursos naturales sin importar el lugar en donde vivan, esto se hace principalmente para que tomemos conciencia de utilizar recursos renovables.</p>
+            </div>
+            <div class="flex-item">
+                <h2>Ejemplos Reales</h2>
+                <p>En Barcelona y Andorra, las comunidades energéticas han tenido éxito en el uso de las energías renovables, siendo la primera sustentada por energía de biomasa y la segunda por energía solar.</p>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>Elaborado por Camilo Builes
-            <a href="mailto:jumes99@gmail.com" target="_blank" class="correo">jumes99@gmail.com</a> 
-            <br>Bootcamp Programación Talento Tech - 2025
-        </p>
+        <p>Elaborado por: Camilo Builes <a href="mailto:jumes99@gmail.com" class="correo">jumes99@gmail.com</a> <br>Botcamp Programación 2025</p>
     </footer>
 </body>
 </html>
